reorganized the app around flask for local testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> MANK CORNER </title>
+        <title> Mayank's Corner </title>
         <link rel="stylesheet" href="static/basic.css" />
         <script src = "static/script.js" type="module"></script>
         <script src = "static/displays.js" type = "module"></script>
@@ -29,8 +29,10 @@
             </div>
             <div class = "subsection-content">
                 <p> 
-                    I'm a computer science major at the University of California, Irvine with interests in Machine Learning and Graph Theory.
-                    I'm also a research assistant for our Computational Cognitive Neurosciences Lab and in a research group for Synthetic Networks.
+                    Hello there! My name is Mayank, and I'm a Computer Science major at the University of California, Irvine specializing in 
+                    Intelligent Systems. I'm part of two research groups at my university: 1) researching the spread of wildfires in California 
+                    with Convolutional Neural Networks and 2) researching synthetic network generators. This site is both a portfolio for the
+                    things I'm working on as well as a means to document some of my technical thoughts. Thanks for stopping by!
                 </p>
             </div>
         </div>
