fixing some relative paths

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title> Mayank's Corner </title>
-        <link rel="stylesheet" href="static/basic.css" />
-        <script src = "static/script.js" type="module"></script>
-        <script src = "static/displays.js" type = "module"></script>
-        <link rel = "icon" type = "image/png" href = "static/images/hotstuff.png"/>
+        <link rel="stylesheet" href="../static/basic.css" />
+        <script src = "../static/script.js" type="module"></script>
+        <script src = "../static/displays.js" type = "module"></script>
+        <link rel = "icon" type = "image/png" href = "../static/images/hotstuff.png"/>
     </head>
     <body>
 
