added images (and PAINFULLY learned to turn caching off on web dev projects)

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,13 +43,21 @@
             </div>
             <div class = "subsection-content">
                 <ul>
-                    <li> <h3>UwUsic</h3></li>
+                    <li> <h3>UwUsic - Mood-Based Spotify Playlist Generation with Machine Learning</h3></li>
+                    <img src="../static/images/uwusic_thumbnail.gif" alt="UwUsic Thumbnail">
                     <p> 
                         <em>An award winner at HackUCI!</em> This site uses machine learning + facial recognition with face-api.js to detect your mood 
                         and generate a Spotify playlist to match using your preferred artists and genre. I trained an SVM model that takes song data
                         from Spotify's API and predicts the levels of happiness, sadness, and anger present in each song's tone.
                     </p>
+                    <li><h3>Wildfire Research with Convolutional Neural Networks</h3></li>
+                    <img src = "../static/images/wildfires.png" alt="Wildfires">
+                    <p>
+                        In one of my research groups, I'm studying the ability of CNNs to help us predict the danger zones and spread of wildfires in
+                        California based on meteorological satellite and vegetation data.
+                    </p>
                     <li><h3>COVID-19 Media Topic Assessments</h3></li>
+                    <img src = "../static/images/NYC_mit.png" alt="Timeline">
                     <p>
                         <em>Top 10 at MIT's Data Hackathon!</em> This research project uses unsupervised topic modeling on social media platforms and 
                         media reports at-large to learn the priorities of public concerns relative to the number of COVID-19 cases and major developments.
