--- a/static/basic.css
+++ b/static/basic.css
@@ -8,7 +8,7 @@ body {
     background-color:#1f1b1b;
     font-size:16px;
     font-family: 'Lucida Console';
-
+    line-height: 20px;
 }
 
 .title {
@@ -47,9 +47,9 @@ h3 {
     display: none;
 }
 
-/*.subsection h2 {
-    display: none;
-}*/
+.subsection-content img {
+    width: 40%;
+}
 
 .title, .subsection {
     font-family: 'Lucida Console', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
