--- a/static/basic.css
+++ b/static/basic.css
@@ -8,72 +8,94 @@
     src: url('Montserrat-Regular.ttf')
 }
 
+@font-face {
+    font-family: "IBMPlex";
+    src: url('IBMPlexSans-Regular.ttf')
+}
+
 body {
-    color: #414141;
-    background-color:#1f1b1b;
-    font-size:16px;
-    line-height: 20px;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    position:relative;
 }
 
-
-.title {
-    font-size:2.5em;
-    text-align:left;
-    margin: 0.7em 0.2em;
-    width: 1400px;
+#banner_container {
+    position: relative;
+    width: 100vw;
+    height: 90vh;
+    overflow: hidden;
 }
 
-.table-of-contents ul{
-    color:white;
-    list-style-type: none;
-    display: inline-block;
+#banner_image img {
+    position: absolute;
+    width: 100%;
+    z-index: -1;
 }
 
-.table-of-contents ul li{
-    float:left;
-    display:none;
-    padding: 1.0em 2.0em;
-}
-
-.table-of-contents ul li h1{
-    font-size: 3em;
-}
-
-p {
-    font-family: 'LibreBaskerville';
-}
-
-h2 {
-    font-size:2em;
-    color: #723cfa;
-}
-
-h3 {
-    color: #42e01b;
-    font-family: 'Montserrat';
-}
-
-.subsection-content {
-    display: none;
-}
-
-.subsection-content img {
-    width: 40%;
-}
-
-.title, .subsection {
-    font-family: 'Lucida Console', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+#title_card {
+    text-align: center;
+    background-color: #bf1d02;
     color: white;
+    z-index: 0;
+    width: 20%;
+    position: absolute;
+    margin-left: 5%;
+    margin-top: 10px;
+    clear: both;
+    opacity: 0;
 }
 
-ul {
-    list-style-type: none;
+#title_card h1 {
+    font-family: "LibreBaskerville";   
 }
 
-a:link, a:visited, a:active {
+#title_card h2 {
+    font-family: "LibreBaskerville";   
+}
+
+#footer {
+    z-index: 1;
+    display: inline-block;
+    width: 100vw;
+}
+
+#footer1 {
+    margin-left: 0.2vw;
+}
+
+.footer_subsection {
     color:white;
+    margin-top: 21px;
+    margin-bottom: 0px;
+    margin-right: 1px;
+    position: relative;
+    display: block;
+    width: 33vw;
+    height: 9.5vh;
+    background-color: #bf1d02;
+    text-align: center;
+    z-index: 2;
+    float: right;
 }
 
-a:hover {
-    color:grey;
+.footer_subsection:hover {
+    background-color: red;
+    color: black;
 }
+
+.footer_subsection h2 {
+    font-family: "LibreBaskerville";
+}
+
+/*.footer_subsection {
+    padding-left: 1 vw;
+    width: 33.33333333vw;
+    height: 9.5vh;
+    position: absolute;
+    margin-top: 0.25vh;
+    background-color: #bf1d02;
+    z-index: 0;
+}*/
+
+
