--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,13 @@
             <div id="banner_image">
                 <img src="../static/images/bb_fountain.jpg">
             </div>
+            <div id="hidden_body">
+                <div class="hidden_subsection" id="hidden_subsection1">
+                    <h1>
+                        Hey! I'm supposed to be hidden!
+                    </h1>
+                </div>
+            </div>
             <div id="title_card">
                 <h1>
                     Mayank Sharma
@@ -30,6 +37,7 @@
                 </h2>
             </div>
         </div>
+
         <div id="footer">
             <div class="footer_subsection" id="footer1">
                 <h2>
