--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,14 @@
             </div>
             <div id="hidden_body">
                 <div class="hidden_subsection" id="hidden_subsection1">
-                    <h1>
-                        Hey! I'm supposed to be hidden!
-                    </h1>
+                    <div id="left_panel">
+                        <p>
+                            Hello there! My name is Mayank, and I'm a Computer Science major at the University of California, Irvine specializing in 
+                            Intelligent Systems. I'm part of two research groups at my university: 1) researching the spread of wildfires in California 
+                            with Convolutional Neural Networks and 2) researching synthetic network generators. This site is both a portfolio for the
+                            things I'm working on as well as a means to document some of my technical thoughts. Thanks for stopping by!
+                        </p>
+                    </div>
                 </div>
             </div>
             <div id="title_card">
