--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,16 @@
                 <div class="hidden_subsection" id="hidden_subsection1">
                     <div id="left_panel">
                         <p>
-                            Hello there! My name is Mayank, and I'm a Computer Science major at the University of California, Irvine specializing in 
-                            Intelligent Systems. I'm part of two research groups at my university: 1) researching the spread of wildfires in California 
-                            with Convolutional Neural Networks and 2) researching synthetic network generators. This site is both a portfolio for the
-                            things I'm working on as well as a means to document some of my technical thoughts. Thanks for stopping by!
+                            Hello there!<br><br>My name is Mayank, and I'm a Computer Science major at the University of California, Irvine specializing in 
+                            Intelligent Systems. As a student professional, my interests focus on Artificial Intelligence and Machine Learning, but I love 
+                            exploring many other facets of technology. I'm part of two research groups at my university:<br><br>1) researching the 
+                            spread of wildfires in California with Convolutional Neural Networks and<br><br>2) researching synthetic network generators.<br><br>This website is a way for me
+                            to document my projects and, occasionally, other thoughts and experiences.<br><br>Thanks for stopping by!
                         </p>
                     </div>
+                </div>
+                <div class="word_soup" id="about_soup">
+                    
                 </div>
             </div>
             <div id="title_card">
